<resources>
    <string name="app_name">My Application</string>
    <string name="copyright">QualiSistemas - Todos os direitos reservados</string>
    <string name="title_activity_upload_imagem_eaprovar">UploadImagemEAprovar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nome_usuario">Nome Usuarios</string>
    <string name="nameUsuario">Nome:</string>
    <string name="nome">NOME</string>
    <string name="capturaspendentes">Capturas pendentes</string>
    <string name="qualicapturas">QualiCaptura</string>
    <string name="font_arial">Arial</string>
</resources>
