<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="140dp"
            android:layout_height="137dp"
            android:layout_gravity="left"
            android:contentDescription="TODO"
            android:gravity="left"
            android:src="@drawable/logo" />

    </LinearLayout>
    <TextView
        android:id="@+id/qualicapturas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:fontFamily="@string/font_arial"
        android:gravity="left"
        android:textColor="@color/colorRED"
        android:text="@string/qualicapturas"
        android:textSize="32dp"
        android:textStyle="bold" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/capturas_pendentes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:textStyle="bold"
                android:text="@string/capturaspendentes" />

            <TextView
                android:id="@+id/nomeConsultaPaginaInicial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:textStyle="bold"
                android:text="@string/nome" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/azulfundolistview"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/listViewUsers"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:visibility="visible" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/copyright" />
    </LinearLayout>

</LinearLayout>
